--- a/client/src/index.css
+++ b/client/src/index.css
@@ -103,7 +103,7 @@ a{
   max-width: 500px;
   width: 100%;
   margin: auto;
-  background-color: #d999f6;
+  background-color: #fef68a;
   /* background-color: #a9edf1; */
   /* background-color: #9beee6; */
   border-radius: 4vh;
