--- a/client/src/index.css
+++ b/client/src/index.css
@@ -72,6 +72,16 @@ a{
   outline: none;
   color: rgb(0, 0, 0);
 }
+.card .bookmark{
+  position: absolute;
+  top:2.1vh;
+  right: 6vh;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  outline: none;
+  color: rgb(0, 0, 0);
+}
 .card h4{
   margin-right: 10px;
   overflow: hidden;
